--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hesham Alshawabka</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       background: #f4f4f4;
       color: #333;
@@ -17,6 +19,17 @@
       padding: 40px 0;
       text-align: center;
     }
+    nav {
+      background: #fff;
+      padding: 10px 20px;
+      text-align: center;
+    }
+    nav a {
+      margin: 0 10px;
+      color: #0077cc;
+      text-decoration: none;
+      font-weight: 600;
+    }
     section {
       max-width: 800px;
       margin: 40px auto;
@@ -26,22 +39,23 @@
       border-bottom: 2px solid #ccc;
       padding-bottom: 5px;
     }
-    .project {
-      background: white;
-      margin: 20px 0;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    form input, form textarea, form button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 8px;
+      font-size: 1rem;
+    }
+    form button {
+      background-color: #0077cc;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
     footer {
       text-align: center;
       padding: 20px;
       background: #222;
       color: white;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
     }
   </style>
 </head>
@@ -52,30 +66,32 @@
     <p>Computer Science Student | Web Developer | AI Enthusiast</p>
   </header>
 
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+  </nav>
+
   <section>
     <h2>About Me</h2>
     <p>Hi! I'm Hesham, a second-year Computer Science student at the University of Roehampton. I enjoy building web apps, solving problems, and working on personal tech projects — especially ones involving AI, cybersecurity, or automation.</p>
   </section>
 
   <section>
-    <h2>Projects</h2>
+    <h2>Contact</h2>
+    <form action="https://formspree.io/f/xovddwrn" method="POST">
+      <label for="email">Your Email</label>
+      <input type="email" name="email" required>
 
-    <div class="project">
-      <h3>Flavour Cartel (Group Project)</h3>
-      <p>A recipe sharing app built with Node.js, Express, MySQL, and OpenAI's API. I worked on the AI integration and login system.</p>
-    </div>
+      <label for="message">Message</label>
+      <textarea name="message" rows="5" required></textarea>
 
-    <div class="project">
-      <h3>eBay Flipping Tool (Personal Project)</h3>
-      <p>Currently building a tool that scrapes eBay listings to help identify profitable flipping opportunities.</p>
-    </div>
-
-    <div class="project">
-      <h3>SpareB&B</h3>
-      <p>A JavaFX-based desktop app for listing accommodations. Built as part of my software development module using OOP and GUI design patterns.</p>
-    </div>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: <a href
+  <footer>
+    &copy; 2025 Hesham Alshawabka
+  </footer>
+
+</body>
+</html>
