--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hesham Alshawabka</title>
+  <title>Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
@@ -74,11 +74,12 @@
   <section>
     <h2>About Me</h2>
     <p>Hi! I'm Hesham, a second-year Computer Science student at the University of Roehampton. I enjoy building web apps, solving problems, and working on personal tech projects — especially ones involving AI, cybersecurity, or automation.</p>
+    <p>Check out my GitHub: <a href="https://github.com/alshawah" target="_blank">github.com/alshawah</a></p>
   </section>
 
   <section>
     <h2>Contact</h2>
-    <form action="https://formspree.io/f/xovddwrn" method="POST">
+    <form action="https://formspree.io/f/YOUR_FORM_ID_HERE" method="POST">
       <label for="email">Your Email</label>
       <input type="email" name="email" required>
 
