--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Hi! I'm Hesham, a second-year Computer Science student at the University of Roehampton. I enjoy building web apps, solving problems, and working on personal tech projects — especially ones involving AI, cybersecurity, or automation.</p>
-    <p>Check out my GitHub: <a href="https://github.com/alshawah" target="_blank">github.com/alshawah</a></p>
+    <p>Hello, I’m Hesham Alshawabka — a second-year Computer Science student at the University of Roehampton, with a strong foundation in full-stack development, automation, and AI integration. I’m passionate about solving real-world problems through software and turning ideas into practical, user-focused tools.</p>
+    <p>My core skills include JavaScript (Node.js, Express), HTML/CSS, MySQL, Java, and Python. I’ve also worked with tools like Git, Docker, and OpenAI’s API to build intelligent web applications. I’m currently exploring opportunities in data scraping, cybersecurity, and ethical AI.</p>
+    <p>Outside of coding, I train in Brazilian Jiu-Jitsu — a hobby that’s taught me discipline, resilience, and the value of consistent effort. Whether on the mat or behind the screen, I enjoy pushing my limits and learning through challenges.</p>
+    <p>I thrive in collaborative environments, enjoy taking initiative on technical projects, and continuously look for ways to grow both personally and professionally.</p>
   </section>
 
   <section>
     <h2>Contact</h2>
+    <p>If you'd like to discuss a project, opportunity, or collaboration, please don’t hesitate to get in touch.</p>
+    <br>
     <form action="https://formspree.io/f/YOUR_FORM_ID_HERE" method="POST">
       <label for="email">Your Email</label>
       <input type="email" name="email" required>
