--- a/projects.html
+++ b/projects.html
@@ -71,21 +71,23 @@
 
   <div class="content">
     <h2>My Projects</h2>
-
+    
     <div class="project">
-      <img src="images/flavour-cartel.png" alt="Flavour Cartel Screenshot">
-      <div class="info">
-        <h3>Flavour Cartel (University Project)</h3>
-        <p>A recipe-sharing web app built with Node.js, MySQL, and OpenAI's API. I worked on the AI integration and login system.</p>
-        <a href="https://github.com/MuzamilAhmed1/The-Flavour-Cartel" target="_blank">View on GitHub</a>
+        <img src="images/flavour-cartel.png" alt="Flavour Cartel Screenshot">
+        <div class="info">
+          <h3>Flavour Cartel (University Project)</h3>
+          <p>Collaborating on a web application that uses AI and web scraping to help users discover and compare recipe ideas. The app allows users to input a dish name, then uses OpenAI to generate a recipe while integrating marketplace-like features for discovering similar dishes. Built with Node.js, Express, MySQL, and OpenAI’s API, the project combines AI integration, user interaction design, and full-stack development.</p>
+          <a href="https://github.com/MuzamilAhmed1/The-Flavour-Cartel" target="_blank">View on GitHub</a>
+        </div>
       </div>
-    </div>
+      
 
     <div class="project">
       <img src="images/ebay-scraper.png" alt="eBay Scraper Screenshot">
       <div class="info">
         <h3>eBay Flipping Tool (Upcoming Personal Project)</h3>
-        <p>A tool designed to scrape eBay listings to help identify profitable flipping opportunities. Currently in development.</p>
+        <p>Collaborating on a web application that uses AI and web scraping to help users find the best online deals. The user inputs a product name, and the app searches multiple marketplaces (e.g. Facebook Marketplace, eBay), comparing listings and recommending the best value. We’re using Python, Flask, SQL for the backend, and HTML for the frontend. This project blends AI development, automation, UX design, and entrepreneurial thinking.
+            Currently in development.</p>
         <a href="https://github.com/alshawah" target="_blank">See My GitHub</a>
       </div>
     </div>
