--- a/index.html
+++ b/index.html
@@ -31,54 +31,102 @@
       background: var(--bg-color);
       color: var(--text-color);
     }
+
     header {
       background: var(--header-bg);
       color: var(--header-text);
       padding: 40px 0;
       text-align: center;
     }
+
     nav {
       background: var(--card-bg);
       padding: 10px 20px;
       text-align: center;
+      position: relative;
     }
+
     nav a {
       margin: 0 10px;
       color: var(--link-color);
       text-decoration: none;
       font-weight: 600;
     }
-    #themeToggle {
-      margin-left: 10px;
-      padding: 6px 12px;
-      font-size: 0.9rem;
-      background: var(--link-color);
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+
+    .theme-switch-wrapper {
+      position: absolute;
+      right: 20px;
+      top: 10px;
     }
+
+    .theme-switch {
+      display: inline-block;
+      height: 24px;
+      position: relative;
+      width: 48px;
+    }
+
+    .theme-switch input {
+      display: none;
+    }
+
+    .slider {
+      background-color: #ccc;
+      bottom: 0;
+      cursor: pointer;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      transition: 0.4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      background-color: white;
+      bottom: 4px;
+      content: "";
+      height: 16px;
+      left: 4px;
+      position: absolute;
+      transition: 0.4s;
+      width: 16px;
+      border-radius: 50%;
+    }
+
+    input:checked + .slider {
+      background-color: #4ea2f2;
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(24px);
+    }
+
     section {
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
     }
+
     h2 {
       border-bottom: 2px solid #ccc;
       padding-bottom: 5px;
     }
+
     form input, form textarea, form button {
       width: 100%;
       padding: 10px;
       margin-top: 8px;
       font-size: 1rem;
     }
+
     form button {
       background-color: var(--link-color);
       color: white;
       border: none;
       cursor: pointer;
     }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -97,7 +145,13 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
-    <button id="themeToggle">Toggle Dark Mode</button>
+    <div class="theme-switch-wrapper">
+    <span style="margin-right: 5px;">Toggle Dark/Light Mode</span>
+      <label class="theme-switch" for="checkbox">
+        <input type="checkbox" id="checkbox" />
+        <span class="slider round"></span>
+      </label>
+    </div>
   </nav>
 
   <section>
@@ -128,17 +182,22 @@
   </footer>
 
   <script>
-    const toggleBtn = document.getElementById('themeToggle');
+    const checkbox = document.getElementById('checkbox');
     const body = document.body;
 
     if (localStorage.getItem('theme') === 'dark') {
       body.classList.add('dark-mode');
+      checkbox.checked = true;
     }
 
-    toggleBtn.addEventListener('click', () => {
-      body.classList.toggle('dark-mode');
-      const theme = body.classList.contains('dark-mode') ? 'dark' : 'light';
-      localStorage.setItem('theme', theme);
+    checkbox.addEventListener('change', () => {
+      if (checkbox.checked) {
+        body.classList.add('dark-mode');
+        localStorage.setItem('theme', 'dark');
+      } else {
+        body.classList.remove('dark-mode');
+        localStorage.setItem('theme', 'light');
+      }
     });
   </script>
 
