update project link

--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@
       <div class="info">
         <h3>eBay Flipping Tool (Upcoming Personal Project)</h3>
         <p>Collaborating on a web application that uses AI and web scraping to help users find the best online deals. The user inputs a product name, and the app searches multiple marketplaces (e.g. Facebook Marketplace, eBay), comparing listings and recommending the best value. We’re using Python, Flask, SQL for the backend, and HTML for the frontend. This project blends AI development, automation, UX design, and entrepreneurial thinking. Currently in development.</p>
-        <a href="https://github.com/alshawah" target="_blank">See My GitHub</a>
+        <a href="https://github.com/alshawah/profitflip-ai" target="_blank">View on GitHub</a>
       </div>
     </div>
   </div>
